[gd_scene load_steps=4 format=3 uid="uid://pi1nany4murr"]

[ext_resource type="Theme" uid="uid://2btvphyhed35" path="res://GUI/Themes/combat_dialog_theme.tres" id="1_eca7b"]
[ext_resource type="Script" path="res://GUI/HUD/compass.gd" id="1_qiheh"]
[ext_resource type="Texture2D" uid="uid://rjm74la7xm8m" path="res://GUI/HUD/minimap/maps.png" id="3_tvmsk"]

[node name="CombassLabel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("1_eca7b")
script = ExtResource("1_qiheh")

[node name="DirectionLabel" type="Button" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "N"

[node name="PopupPanel" type="PopupPanel" parent="."]
initial_position = 1
size = Vector2i(1056, 502)
visible = true

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TextureRect" type="TextureRect" parent="PopupPanel/VBoxContainer"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2
texture = ExtResource("3_tvmsk")
expand_mode = 3
stretch_mode = 5

[node name="CloseButton" type="Button" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Close"

[connection signal="pressed" from="DirectionLabel" to="." method="_on_direction_label_pressed"]
[connection signal="pressed" from="PopupPanel/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
